--- a/.gitignore
+++ b/.gitignore
@@ -162,5 +162,13 @@ pip-log.txt
 # Mac crap
 .DS_Store
 
+#############
+## My Stuff
+#############
+
 # webOS Application Package
 *.ipk
+
+# Ignore My Temp Files
+_TODO.txt
+_Websites.txt
